# ArkText

./: .gitignore  CMakeLists.txt  README.md  main.cpp  premake5.lua
ArkAPI/: ArkAPI.cpp  ArkAPI.hpp  ShapeBase.cpp
Small/Graphics/: Node.cpp
api/: ArkAPI.cpp
include/ArkAPI/: ArkAPI.hpp  Circle.hpp  ShapeBase.hpp
